[metadata]
name = pubpypack-gadget-wilber-hdez
version = 0.0.1
description = My first Python package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wilberh/pubpypack-gadget-wilber-hdez
author = Wilber Hernandez
author_email = "Wilber Hernandez" <wilberhdez@gmail.com>
# license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
requires-python = ">=3.10"

[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*